# python-template-analysis

./: .coveragerc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi-publish.yml  python-test.yml  spellcheck.yml
template_analysis/: __init__.py  analyzer.py  matcher.py  symbol.py  template.py
tests/: test_analyzer.py  test_matcher.py  test_public_api.py  test_symbol.py  test_template.py
