[tool.poetry]
# I use poetry as just a package manager.
# So, I only write the settings that poetry needs.
# The actual package metadata is written in setup.cfg.
# I use pypa/build for packaging.
name = "python-template-analysis"
version = "0.0.0"
description = ""
authors = []
packages = [
    { include = "template_analysis" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"
poethepoet = "*"
setuptools-scm = "*"
build = "*"

[build-system]
requires = ["setuptools",  "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "template_analysis/_version.py"

[tool.poe.tasks]
test = "pytest"
coverage-xml = "pytest --cov=template_analysis --doctest-modules --cov-report=xml"
format = "ruff format template_analysis"
check = "ruff check template_analysis"
build = [
    { cmd = "python -m build"}
]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
ignore_missing_imports = true
disallow_any_decorated = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true

[tool.ruff]
line-length = 79
